--- a/index.html
+++ b/index.html
@@ -24,12 +24,9 @@
 <body>
     <div class="outer-background-container" style="background-image:url('assets/bridge1920_75.jpg');"></div>
     <div class="background-image-overlay"></div>
-
-
+    <div style="text-align: center"><img alt="JCore Technologies" style="width: 100%; max-width: 614px" src="assets/jct-large.png"/></div>
     <div class="page-style" style="display:flex;flex-direction:column;justify-content: space-around;">
-        <div style="flex:3;width:100%">
-            <img alt="JCore Technologies" style="width: 100%; max-width: 614px" src="assets/jct-large.png"/>
-        </div>
+        <div style="flex:1;width:100%"></div>
         <div style="flex:1">
             <h1>Custom mobile, browser and desktop applications to make life a little easier.</h1>
         </div>
@@ -38,9 +35,8 @@
                 flows and building bridges between unrelated programs.</h3>
         </div>
         <div style="flex:2">
-            <div style="display:flex;flex-direction:row;justify-content:space-around;flex-wrap: wrap">
-
-                <div style="flex:1">
+            <div style="display:flex;flex-direction:row;justify-content:center;flex-wrap: wrap">
+                <div style="flex:1;">
                     <a href="https://www.linkedin.com/in/john-fuhrer-8693956/">
                         <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x text-primary">
@@ -53,7 +49,7 @@
                         Contact us on LinkedIn
                     </h4>
                 </div>
-                <div style="flex:1">
+                <div style="flex:1;">
                     <a href="mailto:john@jcoretechnologies.com" target="_top">
                         <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x text-primary">
@@ -63,7 +59,7 @@
                             </span>
                     </a>
                     <h4 class="service-heading">
-                        Email us at <a style="color:yellow" href="mailto:john@jcoretechnologies.com">john@jcoretechnologies.com</a>.
+                        Email us at <a style="color:yellow" href="mailto:john@jcoretechnologies.com">john@jcoretechnologies.com</a>
                     </h4>
                 </div>
             </div>
