--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="clearfix">
         <div class="page-style" style="display:flex;flex-direction:column;justify-content: space-around;">
             <div style="flex:1">
-                <div style="text-align: center"><img alt="JCore Technologies" style="width: 100%; max-width: 614px" src="assets/jct-large.png" /></div>
+                <div style="text-align: center"><img alt="JCore Technologies" style="max-width: 614px" src="assets/jct-large.png" /></div>
             </div>
             <div style="flex:1">
                 <h1>Custom mobile, browser and desktop applications to make life a little easier.</h1>
