--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>
-        JCore Technologies
+        JCore Technologies, LLC
     </title>
 
     <link rel="stylesheet" href="assets/styles.css"></link>
@@ -24,9 +24,8 @@
 <body>
     <div class="outer-background-container" style="background-image:url('assets/bridge1920_75.jpg');"></div>
     <div class="background-image-overlay"></div>
-    <div class="clearfix">
         <div class="page-style" style="display:flex;flex-direction:column;justify-content: space-around;">
-            <div style="flex:1">
+            <div style="flex:2">
                 <div style="text-align: center"><img alt="JCore Technologies" style="max-width: 614px" src="assets/jct-large.png" /></div>
             </div>
             <div style="flex:1">
@@ -66,10 +65,8 @@
                     </div>
                 </div>
             </div>
-            <div style="flex:1;">
-            </div>
-            <div class="footer">Copyright &copy; JCore Technologies, LLC</div>
+            <div style="flex:1;"></div>
+            <div style="flex:1;"><p><small>Copyright &copy; JCore Technologies, LLC</small></p></div>
         </div>
-    </div>
     <div>
 </body>
