--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="background-image-overlay"></div>
         <div class="page-style" style="display:flex;flex-direction:column;justify-content: space-around;">
             <div style="flex:2">
-                <div style="text-align: center"><img alt="JCore Technologies" style="max-width: 614px" src="assets/jct-large.png" /></div>
+                <div style="text-align: center;width:100%"><img alt="JCore Technologies" style="max-width: 614px" src="assets/jct-large.png"/></div>
             </div>
             <div style="flex:1">
                 <h1>Custom mobile, browser and desktop applications to make life a little easier.</h1>
