--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous"></link>
-
-
     <script src="https://use.fontawesome.com/46fa00860e.js"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
@@ -24,7 +21,7 @@
 <body>
     <div class="outer-background-container" style="background-image:url('assets/bridge1920_75.jpg');"></div>
     <div class="background-image-overlay"></div>
-    <div style="text-align: center;"><img alt="JCore Technologies" style="width:100%;max-width:614px" src="assets/jct-large.png" /></div>
+    <div style="text-align: center;max-width:614px"><img alt="JCore Technologies" style="width:100%;" src="assets/jct-large.png" /></div>
     <br>
     <div class="page-style" style="display:flex;flex-direction:column;justify-content: space-around;">
         <div style="flex:2">
