--- a/index.html
+++ b/index.html
@@ -2,20 +2,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>
-        JCore Technologies, LLC
-    </title>
-
+    <title>JCore Technologies, LLC</title>
     <link rel="stylesheet" href="assets/styles.css"></link>
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous"></link>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"></link>
     <script src="https://use.fontawesome.com/46fa00860e.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,13 +16,9 @@
     <div style="text-align: center;max-width:614px"><img alt="JCore Technologies" style="width:100%;" src="assets/jct-large.png" /></div>
     <br>
     <div class="page-style" style="display:flex;flex-direction:column;justify-content: space-around;">
-        <div style="flex:2">
-            <h1>Custom mobile, browser and desktop applications to make life a little easier.</h1>
-        </div>
-        <div style="flex:1">
-            <h3>We're a professional software development team specializing in automating manual processes, streamlining work
-                flows and building bridges between unrelated programs.</h3>
-        </div>
+        <div style="flex:2"></div>
+        <div style="flex:1"><h1>Custom mobile, browser and desktop applications to make life a little easier.</h1></div>
+        <div style="flex:1"><h3>We're a professional software development team specializing in automating manual processes, streamlining work flows and building bridges between unrelated programs.</h3></div>
         <div style="flex:2">
             <div style="display:flex;flex-direction:row;justify-content:center;flex-wrap: wrap">
                 <div style="flex:1;">
@@ -62,9 +50,7 @@
             </div>
         </div>
         <div style="flex:1;"></div>
-        <div style="flex:1;">
-            <p><small>Copyright &copy; JCore Technologies, LLC</small></p>
-        </div>
+        <div style="flex:1;"><p><small>Copyright &copy; JCore Technologies, LLC</small></p></div>
     </div>
     <div>
 </body>
