--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="outer-background-container" style="background-image:url('assets/bridge1920_75.jpg');"></div>
     <div class="background-image-overlay"></div>
-    <div style="text-align: center;max-width:614px"><img alt="JCore Technologies" style="width:100%;" src="assets/jct-large.png" /></div>
+    <img alt="JCore Technologies"style="display: block;margin: auto;width:90%;max-width: 614px;" src="assets/jct-large.png" />
     <br>
     <div class="page-style" style="display:flex;flex-direction:column;justify-content: space-around;">
         <div style="flex:2"></div>
