--- a/index.html
+++ b/index.html
@@ -4,53 +4,63 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>JCore Technologies, LLC</title>
     <link rel="stylesheet" href="assets/styles.css"></link>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"></link>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous"></link>
     <script src="https://use.fontawesome.com/46fa00860e.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="outer-background-container" style="background-image:url('assets/bridge1920_75.jpg');"></div>
     <div class="background-image-overlay"></div>
-    <img alt="JCore Technologies"style="display: block;margin: auto;width:90%;max-width: 614px;" src="assets/jct-large.png" />
-    <br>
-    <div class="page-style" style="display:flex;flex-direction:column;justify-content: space-around;">
-        <div style="flex:2"></div>
-        <div style="flex:1"><h1>Custom mobile, browser and desktop applications to make life a little easier.</h1></div>
-        <div style="flex:1"><h3>We're a professional software development team specializing in automating manual processes, streamlining work flows and building bridges between unrelated programs.</h3></div>
-        <div style="flex:2">
-            <div style="display:flex;flex-direction:row;justify-content:center;flex-wrap: wrap">
-                <div style="flex:1;">
-                    <a href="https://www.linkedin.com/in/john-fuhrer-8693956/">
-                        <span class="fa-stack fa-4x">
+    <div style="padding-top:2%;padding-bottom:2%">
+        <img alt="JCore Technologies" style="display: block;margin: auto;width:90%;max-width: 614px;" src="assets/jct-large.png"
+        />
+    </div>
+
+    <div style="padding-top:5%;padding-bottom: 2%;text-align: center;color: white">
+        <h1>Custom mobile, browser and desktop applications to make life a little easier.</h1>
+    </div>
+
+
+    <div style="padding-top:2%;padding-bottom: 5%;text-align: center;color: white">
+        <h3>We're a professional software development team specializing in automating manual processes, streamlining work flows
+            and building bridges between unrelated programs.</h3>
+    </div>
+
+    <div style="padding-top:2%;padding-bottom: 2%;text-align: center;color: white">
+        <div style="display:flex;flex-direction:row;justify-content:center;flex-wrap: wrap">
+            <div style="flex:1;">
+                <a href="https://www.linkedin.com/in/john-fuhrer-8693956/">
+                    <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x text-primary">
                                 </i>
                                 <i class="fa fa-linkedin-square fa-stack-1x fa-inverse">
                                 </i>
                             </span>
-                    </a>
-                    <h4 class="service-heading">
-                        Contact us on LinkedIn
-                    </h4>
-                </div>
-                <div style="flex:1;">
-                    <a href="mailto:john@jcoretechnologies.com" target="_top">
-                        <span class="fa-stack fa-4x">
+                </a>
+                <h4 class="service-heading">
+                    <a style="color:white" href="https://www.linkedin.com/in/john-fuhrer-8693956/">LinkedIn Profile</a>
+                </h4>
+            </div>
+            <div style="flex:1;">
+                <a href="mailto:john@jcoretechnologies.com" target="_top">
+                    <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x text-primary">
                                 </i>
                                 <i class="fa fa-envelope-o fa-stack-1x fa-inverse">
                                 </i>
                             </span>
-                    </a>
-                    <h4 class="service-heading">
-                        Email us at <a style="color:yellow" href="mailto:john@jcoretechnologies.com">john@jcoretechnologies.com</a>
-                    </h4>
-                </div>
+                </a>
+                <h4 class="service-heading">
+                    <a style="color:white" href="mailto:john@jcoretechnologies.com">Contact Us</a>
+                </h4>
             </div>
         </div>
-        <div style="flex:1;"></div>
-        <div style="flex:1;"><p><small>Copyright &copy; JCore Technologies, LLC</small></p></div>
+    </div>
+    <div style="padding-top:2%;padding-bottom: 2%;text-align: center;color:darkgray">Copyright &copy; JCore Technologies, LLC</div>
     </div>
     <div>
 </body>
